--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
     "rewrites": [
+        { "source": "/static/(.*)", "destination": "/static/$1" },
         { "source": "/(.*)", "destination": "/index.html" }
-    ],
-    "routes": [
-        {
-            "src": "/static/(.*)",
-            "dest": "/static/$1"
-        }
     ]
 }
