--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "description": "",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "react-scripts": "5.0.0"
+}
 }
