--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [
         { "source": "/static/(.*)", "destination": "/static/$1" },
-        { "source": "/(.*)", "destination": "index.html" }
+        { "source": "/(.*)", "destination": "frontend/index.html" }
     ]
 }
